--- a/src/tool/Launcher/Launcher.vcxproj.filters
+++ b/src/tool/Launcher/Launcher.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClInclude Include="StdAfx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\common\N3Utils.h">
+    <ClInclude Include="..\..\common\N3Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
